--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ boto3==1.9.71
 mecab-python-windows==0.996.1
 pyperclip==1.7.0
 requests==2.21.0
+romkan==0.2.1
+playsound==1.2.2
+pycryptodome==3.8.1
